<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModuleProducts.TypeProducts.TypeProductActivity">

    <TextView
        android:id="@+id/txtListTypeCreated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_horizontal"
        android:text="@string/createTypeListTypeProducts"
        android:textSize="20sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTypes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_above="@+id/layoutCreateNewType"
        android:layout_below="@+id/txtListTypeCreated"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/background_edit_text" />

    <LinearLayout
        android:id="@+id/layoutCreateNewType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Crear nuevo tipo de producto"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinnerRegisterTypeColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_spinner"
            android:contentDescription="@string/app_name"
            android:entries="@array/spinner"
            android:minHeight="48dp"
            android:spinnerMode="dialog" />

        <EditText
            android:id="@+id/edtRegisterTypeProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxLength="20"
            android:background="@drawable/background_edit_text"
            android:gravity="center_horizontal"
            android:hint="@string/hintNameNewTypeProduct"
            android:textSize="20sp" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="onButtonSumType"
            android:backgroundTint="@color/color_app"
            android:text="@string/strSumListTypeProducts"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>